--- a/part_1_mars_news_main.ipynb
+++ b/part_1_mars_news_main.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "# Import Splinter and BeautifulSoup\n",
     "from splinter import Browser\n",
-    "from bs4 import BeautifulSoup as soup"
+    "from bs4 import BeautifulSoup as Soup"
    ]
   },
   {
@@ -27,6 +27,7 @@
    },
    "outputs": [],
    "source": [
+    "# Set up Splinter\n",
     "browser = Browser('chrome')"
    ]
   },
@@ -45,11 +46,24 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Visit the Mars news site\n",
     "url = 'https://static.bc-edx.com/data/web/mars_news/index.html'\n",
-    "browser.visit(url)"
+    "browser.visit(url)\n",
+    "# Optional delay for loading the page\n",
+    "browser.is_element_present_by_css('div.list_text', wait_time=1)"
    ]
   },
   {
@@ -67,7 +81,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a Beautiful Soup object\n"
+    "# Scrape the website and Create a Beautiful Soup object\n",
+    "html = browser.html\n",
+    "soup = Soup(html, 'html.parser')"
    ]
   },
   {
@@ -76,7 +92,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract all the text elements\n"
+    "# Extract all the text elements\n",
+    "# HTML Elements: div class= \"list_text\"; \"content_title\"; \"article_teaser_body\"\n",
+    "article_divs = soup.find_all('div', class_=\"list_text\")"
    ]
   },
   {
@@ -106,7 +124,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create an empty list to store the dictionaries\n"
+    "# Create an empty list to store the dictionaries\n",
+    "article_list = []"
    ]
   },
   {
@@ -116,9 +135,18 @@
    "outputs": [],
    "source": [
     "# Loop through the text elements\n",
+    "for article in article_divs:\n",
+    "    \n",
     "# Extract the title and preview text from the elements\n",
+    "    title = article.find('div', class_=\"content_title\").text\n",
+    "    preview = article.find('div', class_=\"article_teaser_body\").text\n",
+    "    \n",
     "# Store each title and preview pair in a dictionary\n",
-    "# Add the dictionary to the list\n"
+    "    article_dict = {\"title\": title,\n",
+    "                   \"preview\": preview}\n",
+    "    \n",
+    "# Add the dictionary to the list\n",
+    "    article_list.append(article_dict)"
    ]
   },
   {
@@ -167,7 +195,8 @@
     }
    ],
    "source": [
-    "# Print the list to confirm success\n"
+    "# Print the list to confirm success\n",
+    "article_list"
    ]
   },
   {
@@ -203,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.12"
   },
   "vscode": {
    "interpreter": {
